# binary-layout

./: Cargo.toml  ChangeLog.txt  LICENSE-MIT  README.md  README.tpl  gen_readme.sh  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
src/: endianness.rs  example.rs  fields.rs  layout_as.rs  lib.rs  macro_binary_layout.rs  macro_define_layout.rs  view.rs
src/data_types/: mod.rs
src/data_types/primitive/: float.rs  int.rs  mod.rs  nonzero_int.rs  unit.rs
src/data_types/slice/: fixed_size.rs  mod.rs  open_ended.rs
src/fields/: bool.rs  char.rs  mod.rs  nested.rs  primitive.rs  wrapped.rs
src/fields/primitive/: copy_access.rs  mod.rs  nested_access.rs  read_write_ext.rs  slice_access.rs  try_copy_access.rs  view.rs
src/fields/primitive/copy_access/: mod.rs  primitive_float.rs  primitive_int.rs  primitive_nonzero_int.rs  primitive_unit.rs  read_write_ext.rs
src/utils/: data.rs  infallible.rs  mod.rs
src/view/: mod.rs  primitive.rs
tests/: common.rs  deprecated.rs  empty.rs  endianness.rs  extract.rs  nested.rs  noslice.rs  sliceonly.rs  unit.rs  withslice.rs  wrapped.rs
