[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2018"
name = "binary-layout"
version = "0.2.0"
readme = "README.md"
documentation = "https://docs.rs/binary-layout"
homepage = "https://github.com/smessmer/binary-layout"
repository = "https://github.com/smessmer/binary-layout"
license = "MIT OR Apache-2.0"
keywords = ["binary", "layout", "data", "structured", "format"]
categories = ["data-structures", "encoding", "memory-management", "network-programming"]
description = "The binary-layout library allows type-safe, inplace, zero-copy access to structured binary data. You define a custom data layout and give it a slice of binary data, and it will allow you to read and write the fields defined in the layout from the binary data without having to copy any of the data. It's similar to transmuting to/from a `#[repr(packed)]` struct, but much safer."

[badges]
github = {repository = "smessmer/binary-layout", workflow = "rust.yml"}

[dependencies]
doc-comment = "0.3.3"
paste = "1.0.5"

[dev-dependencies]
rand = "^0.8.1"
